Basic additions for image information and download option Updated readme More sensible html creation

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <script src='../assets/jquery.1.10.js'></script>
     <script src='popup.js'></script>
-    <link rel="stylesheet" type="text/css" href="style.css"/>
+    <link rel="stylesheet" type="text/css" href="../assets/pure.css"/>
+    <link rel="stylesheet" type="text/css" href="../assets/style.css"/>
 </head>
 <body style="width:400px;">
-    <div id="header"><button id="options"><i class="icon icon-cogs"></i></button></div>
+    <div id="header"><button class="pure-button" id="options"><img src="../icons/options.png" title="settings"></button></div>
     <div id="options-wrapper">
-
+        Options
 
     </div>
     <div id='message'>Fetching Images</div>
